# Tracking-controller

./: README.md
sim_control/: CMakeLists.txt
sim_control/include/sim_control/: tracking_controller.hpp  tracking_controller_pid.hpp  tracking_controller_rev.hpp  tracking_controller_rev_slam.hpp  tracking_controller_rev_slam_vel.hpp
sim_control/launch/: mobile_ctrl.launch  tracking_control.launch
sim_control/src/: gnd_truth.cpp  motor_dynamics.1.cpp  motor_dynamics.cpp  rectangle_simulation.cpp  route1_pub.cpp  route2_pub.cpp  simulation_controller.cpp  simulation_controller2.cpp  slam_pose.cpp  test.cpp  tracking_controller_pid.cpp  tracking_controller_rev.cpp
vehicle_control/: CMakeLists.txt
vehicle_control/include/vehicle_control/: tracking_control.hpp  wheel_odometry.hpp
vehicle_control/src/: vel_cmd.cpp
